test_programs/compile_failure/nested_mutable_ref_in_if/src/main.nr
fn main() {
    let mut ref = &mut 0;
    if false {
        ref = &mut 1;
    } else {
        ref = &mut 2;
    }
    println(*ref);
}
